syntax = "proto3";

package api;

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
    string error = 2;
}

message ListUsersRequest {}

message ListUsersResponse {
    repeated User users = 1;
    int32 total = 2;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string role = 3;
}

message CreateUserResponse {
    User user = 1;
    string message = 2;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
}

message UpdateUserResponse {
    User user = 1;
    string message = 2;
    string error = 3;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string message = 1;
    string error = 2;
}
